# odoo15

./: odoo-bin  odoo15.conf
backup/: purchase_order_line_views.xml
backup/pharma_link/: __manifest__.py  models.py
backup/pharma_link/near/: generate_key.py  near_interaction.js
backup/pharma_link/security/: ir.model.access.csv
contract/: Cargo.toml
contract/assembly/: main.ts
custom_addons/fp700_printer_integration/: __manifest__.py
custom_addons/fp700_printer_integration/models/: __init__.py  fp700_printer.py  fp700_printer_configuration.py  pos_config.py  pos_order.py
custom_addons/fp700_printer_integration/security/: ir.model.access.csv
custom_addons/fp700_printer_integration/views/: fp700_printer_configuration_views.xml  pos_config_views.xml
custom_addons/hospital_commission/: __manifest__.py
custom_addons/near_order_encryption/: __manifest__.py  steps
custom_addons/near_order_encryption/data/: email_template.xml
custom_addons/near_order_encryption/models/: __init__.py  near_encryption_models.py
custom_addons/near_order_encryption/security/: ir.model.access.csv
custom_addons/patient_order_encryption/: __manifest__.py  models.py
custom_addons/patient_portal/: __manifest__.py
custom_addons/pharma_link/: models.py  near_integration.py  views.xml
custom_addons/purchase_order_encryption/: __manifest__.py
custom_addons/website_portal_internal_users/: __manifest__.py  controllers.py
custom_addons/website_portal_internal_users_appointment/: __manifest__.py  appointment.py  controllers.py
(+25 files in other folders)
